
      HADOOP-12327. Initialize output buffers with ZERO bytes in erasure coder.
      (Kai Zheng via waltersu4549)

      HADOOP-12047. Indicate preference not to affect input buffers during
      coding in erasure coder. (Kai Zheng via waltersu4549)

      HADOOP-12544. Erasure Coding: create dummy raw coder to isolate performance
      issues in testing. (Rui Li via zhz)

Release 2.9.0 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    HADOOP-12321. Make JvmPauseMonitor an AbstractService.
    (Sunil G via Stevel)

    HADOOP-12625. Add a config to disable the /logs endpoints (rkanter)

    HADOOP-12566. Add NullGroupMapping. (Daniel Templeton via kasha)

  OPTIMIZATIONS

  BUG FIXES

Release 2.8.0 - UNRELEASED

  INCOMPATIBLE CHANGES

    HADOOP-11746. rewrite test-patch.sh (aw)

    HADOOP-12416. Trash messages should be handled by Logger instead of being
    delivered on System.out. (Mingliang Liu via aajisaka)

  NEW FEATURES

    HADOOP-11226. Add a configuration to set ipc.Client's traffic class with
    IPTOS_LOWDELAY|IPTOS_RELIABILITY. (Gopal V via ozawa)

    HADOOP-9477. Add posixGroups support for LDAP groups mapping service.
    (Dapeng Sun via Yongjun Zhang)

    HADOOP-11843. Make setting up the build environment easier.
    (Niels Basjes via cnauroth)

    HADOOP-11949. Add user-provided plugins to test-patch (Sean Busbey via aw)

    HADOOP-8934. Shell command ls should include sort options (Jonathan Allen
    via aw)

    HADOOP-10971. Add -C flag to make `hadoop fs -ls` print filenames only.
    (Kengo Seki via aajisaka)

    HADOOP-5732. Add SFTP FileSystem. (Ramtin Boustani and Inigo Goiri via
    cdouglas)

    HADOOP-12360. Create StatsD metrics2 sink. (Dave Marion via stevel)

    HADOOP-10300. Allowed deferred sending of call responses. (Daryn Sharp via
    yliu)

    HADOOP-12657. Add a option to skip newline on empty files with getMerge -nl.
    (Kanaka Kumar Avvaru via aajisaka)

  IMPROVEMENTS
