@@ -208,6 +208,60 @@ argument_list|,
 literal|true
 argument_list|)
 expr_stmt|;
+name|int
+index|[]
+name|inputPositions
+init|=
+operator|new
+name|int
+index|[
+name|inputs
+operator|.
+name|length
+index|]
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|inputPositions
+operator|.
+name|length
+condition|;
+name|i
+operator|++
+control|)
+block|{
+if|if
+condition|(
+name|inputs
+index|[
+name|i
+index|]
+operator|!=
+literal|null
+condition|)
+block|{
+name|inputPositions
+index|[
+name|i
+index|]
+operator|=
+name|inputs
+index|[
+name|i
+index|]
+operator|.
+name|position
+argument_list|()
+expr_stmt|;
+block|}
+block|}
 if|if
 condition|(
 name|usingDirectBuffer
@@ -222,8 +276,9 @@ argument_list|,
 name|outputs
 argument_list|)
 expr_stmt|;
-return|return;
 block|}
+else|else
+block|{
 name|int
 index|[]
 name|inputOffsets
@@ -402,6 +457,7 @@ argument_list|,
 name|outputOffsets
 argument_list|)
 expr_stmt|;
+block|}
 for|for
 control|(
 name|int
@@ -415,33 +471,32 @@ name|inputs
 operator|.
 name|length
 condition|;
-operator|++
 name|i
+operator|++
 control|)
 block|{
-name|buffer
-operator|=
+if|if
+condition|(
 name|inputs
 index|[
 name|i
 index|]
-expr_stmt|;
-if|if
-condition|(
-name|buffer
 operator|!=
 literal|null
 condition|)
 block|{
 comment|// dataLen bytes consumed
-name|buffer
+name|inputs
+index|[
+name|i
+index|]
 operator|.
 name|position
 argument_list|(
-name|buffer
-operator|.
-name|position
-argument_list|()
+name|inputPositions
+index|[
+name|i
+index|]
 operator|+
 name|dataLen
 argument_list|)
