@@ -586,6 +586,48 @@ name|testCodingDoMixAndTwice
 argument_list|()
 expr_stmt|;
 block|}
+annotation|@
+name|Test
+DECL|method|testCodingInputBufferPosition ()
+specifier|public
+name|void
+name|testCodingInputBufferPosition
+parameter_list|()
+block|{
+name|prepare
+argument_list|(
+literal|null
+argument_list|,
+literal|6
+argument_list|,
+literal|3
+argument_list|,
+operator|new
+name|int
+index|[]
+block|{
+literal|0
+block|}
+argument_list|,
+operator|new
+name|int
+index|[]
+block|{
+literal|0
+block|}
+argument_list|)
+expr_stmt|;
+name|testInputPosition
+argument_list|(
+literal|false
+argument_list|)
+expr_stmt|;
+name|testInputPosition
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 end_class
 
