@@ -950,6 +950,160 @@ return|return
 name|decoder
 return|;
 block|}
+comment|/**    * Tests that the input buffer's position is moved to the end after    * encode/decode.    */
+DECL|method|testInputPosition (boolean usingDirectBuffer)
+specifier|protected
+name|void
+name|testInputPosition
+parameter_list|(
+name|boolean
+name|usingDirectBuffer
+parameter_list|)
+block|{
+name|this
+operator|.
+name|usingDirectBuffer
+operator|=
+name|usingDirectBuffer
+expr_stmt|;
+name|prepareCoders
+argument_list|()
+expr_stmt|;
+name|prepareBufferAllocator
+argument_list|(
+literal|false
+argument_list|)
+expr_stmt|;
+comment|// verify encode
+name|ECChunk
+index|[]
+name|dataChunks
+init|=
+name|prepareDataChunksForEncoding
+argument_list|()
+decl_stmt|;
+name|ECChunk
+index|[]
+name|parityChunks
+init|=
+name|prepareParityChunksForEncoding
+argument_list|()
+decl_stmt|;
+name|ECChunk
+index|[]
+name|clonedDataChunks
+init|=
+name|cloneChunksWithData
+argument_list|(
+name|dataChunks
+argument_list|)
+decl_stmt|;
+name|encoder
+operator|.
+name|encode
+argument_list|(
+name|dataChunks
+argument_list|,
+name|parityChunks
+argument_list|)
+expr_stmt|;
+name|verifyBufferPositionAtEnd
+argument_list|(
+name|dataChunks
+argument_list|)
+expr_stmt|;
+comment|// verify decode
+name|backupAndEraseChunks
+argument_list|(
+name|clonedDataChunks
+argument_list|,
+name|parityChunks
+argument_list|)
+expr_stmt|;
+name|ECChunk
+index|[]
+name|inputChunks
+init|=
+name|prepareInputChunksForDecoding
+argument_list|(
+name|clonedDataChunks
+argument_list|,
+name|parityChunks
+argument_list|)
+decl_stmt|;
+name|ensureOnlyLeastRequiredChunks
+argument_list|(
+name|inputChunks
+argument_list|)
+expr_stmt|;
+name|ECChunk
+index|[]
+name|recoveredChunks
+init|=
+name|prepareOutputChunksForDecoding
+argument_list|()
+decl_stmt|;
+name|decoder
+operator|.
+name|decode
+argument_list|(
+name|inputChunks
+argument_list|,
+name|getErasedIndexesForDecoding
+argument_list|()
+argument_list|,
+name|recoveredChunks
+argument_list|)
+expr_stmt|;
+name|verifyBufferPositionAtEnd
+argument_list|(
+name|inputChunks
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|verifyBufferPositionAtEnd (ECChunk[] inputChunks)
+specifier|private
+name|void
+name|verifyBufferPositionAtEnd
+parameter_list|(
+name|ECChunk
+index|[]
+name|inputChunks
+parameter_list|)
+block|{
+for|for
+control|(
+name|ECChunk
+name|chunk
+range|:
+name|inputChunks
+control|)
+block|{
+if|if
+condition|(
+name|chunk
+operator|!=
+literal|null
+condition|)
+block|{
+name|Assert
+operator|.
+name|assertEquals
+argument_list|(
+literal|0
+argument_list|,
+name|chunk
+operator|.
+name|getBuffer
+argument_list|()
+operator|.
+name|remaining
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+block|}
 block|}
 end_class
 
